media/css/mediathread_new.css
/* ... */
#sequence.read-only .jux-playhead-line,
#sequence.submitted .jux-playhead-line {
    height: 10px;
}

/* LTI Landing Page */
.lti-landing-page .mediathread-background-logo {
    height: 450px;
}

/* LTI Asset View */
.lti-asset-view .flowplayer-timedisplay {
    display: none;
}

.lti-asset-view .videoclipbox {
    background-color: #f8f8f8;
    border: 1px solid #e7e7e7;
    border-radius: 4px;
}

.lti-asset-view .videoclipbox-metadata {
    color: #777;
    height: 55px;
    padding: 8px;
    font-size: 18px;
}

.lti-asset-view .videoclipbox-metadata .title {
    margin: 0 6px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    max-width: 300px;
    height: 37px;
    font-weight: bold;
}

.lti-asset-view .videoclipbox-metadata .timecode {
    font-weight: normal;
    margin-top: 8px;
}

.badge-danger {
  background-color: #b94a48;
}
.badge-warning {
  background-color: #f89406;
}
.badge-success {
  background-color: #468847;
}

.page-count {
    margin-top: 5px;
}

.pipe-divider {
    margin-left: 4px;
    margin-right: 4px;
}

.image-overlay .badge {
    position: absolute;
    right: 10px;
    top: 10px;
}

.ol-map {
    height: 200px;
}

.image-overlay {
    position: relative;
}

.vid-timecode {
    background-color: white;
    color: black;
    position: absolute;
    bottom: 8px;
    left: 8px;
}

#skip a {
    position: absolute;
    left: -10000px;
    top: auto;
    width: 1px;
    height: 1px;
    overflow: hidden;
}

#skip a:focus {
    position: static;
    width: auto;
    height: auto;
}

#search-well {
    border-radius: .25em;
    background-color: #f6f6f6;
    padding: .5em .5em 0em .5em;
    margin-bottom: 1em;
}

#search-well label {
    font-size: .8em;
}

#search-well .form-group {
    z-index: 3;
}

